[project]
name = "thumbrok"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ffmpeg>=1.4",
    "openai-whisper>=20250625",
    "pydantic>=2.13.4",
    "srt>=3.5.3",
    "xai-sdk>=1.12.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]
